# ezEngine

./: .gitignore  CMakePresets.json
Code/BuildSystem/CMake/: ezUtils.cmake
Code/BuildSystem/CMake/CMakeUtils/: ezUtilsRenderer.cmake
Code/Editor/EditorFramework/CodeGen/: CppProject.cpp  CppProject.h
Code/Editor/EditorFramework/PropertyGrid/: FileBrowserPropertyWidget.moc.h
Code/Engine/Core/GameApplication/Implementation/: GameApplicationBaseInit.cpp
Code/Engine/Core/Input/: InputManager.h
Code/Engine/Core/System/: Window.h
Code/Engine/Core/System/Implementation/: Window.cpp
Code/Engine/Foundation/: CMakeLists.txt
Code/Engine/Foundation/Basics/: IncludeAll.cpp
Code/Engine/Foundation/Configuration/Implementation/: Plugin.cpp
Code/Engine/RendererCore/: RendererCorePCH.cpp
Code/Engine/RendererVulkan/: CMakeLists.txt  RendererVulkanPCH.h
Code/Engine/RendererVulkan/Device/: DeviceVulkan.h
Code/EnginePlugins/InspectorPlugin/: Console.cpp  FileSystem.cpp  GlobalEvents.cpp  InspectorPlugin.cpp  Reflection.cpp  ResourceManager.cpp
Code/Samples/ShaderExplorer/: CMakeLists.txt  ShaderExplorer.cpp
Code/UnitTests/CoreTest/: CMakeLists.txt
Code/UnitTests/CoreTest/Scripting/: TypeScriptTest.cpp
Data/Platform/Android/: AndroidManifest.xml
Data/Samples/Testing Chambers/AI/: AiWalker.ezVisualScriptClassAsset  AiWalker2.ezPrefab  HunterBot.ezPrefab
Data/Samples/Testing Chambers/Scenes/: Ai.ezScene  Vegetation.ezScene
Utilities/: BuildApk.ps1  DbgAndroidJdb.ps1  DbgAndroidLldb.ps1  RunStaticLinkUtil.bat  TestAndroid.ps1
(+42 files in other folders)
